<resources>
    <string name="app_name">Emergency Report</string>
    <string name="menu">Menu</string>
    <string name="default_emergency_text_replacer">Enter your text here</string>
    <string name="emergency_text_title">Set emergency text</string>
    <string name="default_emergency_text">I have an emergency.</string>
    <string name="emergency_contacts">Emergency contacts</string>
    <string name="contact_pick_text">Add contact</string>
    <string name="contact_delete_text">Delete contact</string>
    <string name="send_text_button">Send text</string>
    <string name="profile">Profile</string>
    <string name="signup_text">Need an account?</string>
    <string name="signin_text">Already have an account?</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="person_name">Person Name</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="change_name">Change username</string>
    <string name="change_email">Change email</string>
    <string name="log_out">Log Out</string>
    <string name="enter_new_attribute">Enter new attribute</string>
    <string name="change_button_submit">Submit</string>
    <string name="change_phone_number_field">Change phone number.</string>
    <string name="change_phone_number_submit_button">Change phone number.</string>
    <string name="change_phone_number_hint">Change phone number</string>
    <string name="contact_name">Contact name</string>
    <string name="address_not_available">Address not available</string>
    <string name="location_activity">See location</string>
    <string name="phone_number_signup">Phone Number</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="name_signup">Name</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_friend_s_phone_number">Enter friend\'s phone number</string>
    <string name="add_friend">Add Friend</string>
    <string name="friends_list">Friends</string>
    <string name="profile_picture">Profile picture\n</string>
    <string name="emptyFriendsList">The friends list is empty.</string>
    <string name="emptyFriendsReqList">The friend requests list is empty.</string>
    <string name="accept">Accept</string>
    <string name="delete">Delete</string>
    <string name="lastmessage">LastMessage</string>
    <string name="permissions">Permissions</string>
    <string name="do_you_really_want_to_send_an_emergency_text">Do you really want to send an emergency text?</string>
    <string name="permission_name">Permission Name</string>
    <string name="description">Description</string>
    <string name="dialog_text">Dialog text</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

</resources>