<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <PreferenceCategory android:title="Profile" >
        <Preference
            android:key="profile"
            android:title="@string/profile">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.example.emergencyapp.activities.ProfileActivity"
                android:targetPackage="com.example.emergencyapp" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="Contacts">
        <Preference
            android:key="friends_list"
            android:title="@string/friends_list">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.example.emergencyapp.activities.FriendsListActivity"
                android:targetPackage="com.example.emergencyapp" />
        </Preference>
        <Preference
            android:key="add_emergency_contact"
            android:title="@string/emergency_contacts">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.example.emergencyapp.activities.AddContactActivity"
                android:targetPackage="com.example.emergencyapp" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="Settings" >
        <EditTextPreference
            android:defaultValue="@string/default_emergency_text"
            android:fontFamily="sans-serif-black"
            android:key="emergency_text"
            android:selectAllOnFocus="true"
            android:singleLine="false"
            android:summary="@string/default_emergency_text_replacer"
            android:title="@string/emergency_text_title" />
        <Preference
            android:key="permissions"
            android:title="@string/permissions">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.example.emergencyapp.activities.PermissionsActivity"
                android:targetPackage="com.example.emergencyapp" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>