<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <EditTextPreference
        android:defaultValue="@string/default_emergency_text"
        android:fontFamily="sans-serif-black"
        android:key="emergency_text"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/emergency_text_title"
        android:summary="@string/default_emergency_text_replacer"/>
    <Preference
        android:key="add_emergency_contact"
        android:title="@string/add_contact">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.example.emergencyapp"
            android:targetClass="com.example.emergencyapp.AddContactActivity"/>
    </Preference>

</PreferenceScreen>