<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewProfileFriendRequest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/profile_picture"
        android:src="@drawable/baseline_person_24" />

    <TextView
        android:id="@+id/textViewNameFriendRequest"
        app:layout_constraintBottom_toBottomOf="@id/imageViewProfileFriendRequest"
        app:layout_constraintStart_toEndOf="@id/imageViewProfileFriendRequest"
        app:layout_constraintTop_toTopOf="@id/imageViewProfileFriendRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/person_name"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnAcceptRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/textViewNameFriendRequest"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/accent_color_second"/>

    <Button
        android:id="@+id/btnDeleteRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintStart_toEndOf="@id/btnAcceptRequest"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/accent_color_second"/>

</androidx.constraintlayout.widget.ConstraintLayout>