<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.ProfileActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            style="@style/ToolbarTheme"
            app:menu="@menu/navigation_menu"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/my_toolbar"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/baseline_person_24"
            android:padding="5dp"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/accent_color_third"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/person_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/person_name"
                android:textColor="@color/black"
                android:textSize="35sp"/>

            <View style="@style/Divider"/>

            <TextView
                android:id="@+id/changeNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/change_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <View style="@style/Divider"/>

            <TextView
                android:id="@+id/changePictureTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/change_profile_picture"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View style="@style/Divider"/>

            <TextView
                android:id="@+id/changePhoneNumberTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/change_phone_number"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <View style="@style/Divider"/>

            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/location_activity"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <View style="@style/Divider"/>

            <TextView
                android:id="@+id/friendsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/friends_list"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <View style="@style/Divider"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <Button
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="@color/primary_color"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:text="@string/log_out" />
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>